# VoiceNote-Ref-C

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dockerfile
.github/workflows/: ci.yml
model/DcCut/: dc_cut.cpp  dc_cut.h
model/NoiseGate/: noise_gate.cpp  noise_gate.h
tests/DcCut/: test_dc_cut.cpp
tests/DcCut/golden/: dc_cut_case1.csv  dc_cut_case1_input.csv  dc_cut_case2.csv  dc_cut_case2_input.csv  dc_cut_case3_input.csv  dc_cut_case4.csv  dc_cut_case4_input.csv  dc_cut_case5.csv  dc_cut_case5_input.csv
tests/DcCut/output/: dc_cut_case1_cpp.csv  dc_cut_case2_cpp.csv  dc_cut_case3_cpp.csv  dc_cut_case4_cpp.csv  dc_cut_case5_cpp.csv
tests/NoiseGate/: test_noise_gate.cpp
tests/NoiseGate/golden/: noise_gate_case1.csv  noise_gate_case1_input.csv  noise_gate_case2.csv  noise_gate_case2_input.csv  noise_gate_case3.csv  noise_gate_case3_input.csv  noise_gate_case4.csv  noise_gate_case4_input.csv  noise_gate_case5.csv  noise_gate_case5_input.csv
tests/NoiseGate/output/: noise_gate_case1_cpp.csv  noise_gate_case2_cpp.csv  noise_gate_case4_cpp.csv  noise_gate_case5_cpp.csv
tests/common/: param.h  test_utils.cpp  test_utils.h
